--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@
 PORT=8080
 GIN_MODE=debug
 
-# Storage configuration
-SQLITE_DB_PATH=data/config.db
+# Security
+# Format: key1:client1,key2:client2
+API_KEYS=dev-api-key:development,test-key:testing
